# rl-inventory-management-comp4010

./: .gitignore  ExtendedInventoryEnv.py  QLearning.py  README.md  demo.py  evaluate.py  pyproject.toml
rl_inventory/agents/: __init__.py
rl_inventory/agents/DoubleDQN/: DoubleDQN.py  __init__.py
rl_inventory/agents/DoubleDQN/trained_models/: 20251125_012040.pt
rl_inventory/agents/dyna_q/: __init__.py  dyna_q.py
rl_inventory/agents/dyna_q/trained_models/: 20251125_011757.pkl
rl_inventory/agents/ppo/: PPO.py
rl_inventory/agents/qlearning/trained_models/: 20251124_234818.pkl  20251130_145022.pkl
rl_inventory/agents/sac/: SAC.py  __init__.py
rl_inventory/envs/: ExtendedInventoryEnv_DDQN.py  __init__.py  extended_inventory.py  extended_inventory_ppo.py
rl_inventory/results/evaluation_20251125_133056/: results_summary.csv  results_text.txt
rl_inventory/results/evaluation_20251130_121320/: results_summary.csv  results_text.txt
rl_inventory/results/evaluation_20251130_145018/: results_summary.csv  results_text.txt
rl_inventory/scripts/: demo_ddqn.py  dyna_q_demo.py  evaluate.py  ppo_demo.py  q_learning_demo.py  sac_demo.py
